--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
                     <a href="#" class="a-navbar" onclick="buttonClick()">HOME</a>
                 </li>
                 <li class="li-navbar">
-                    <a href="/indexx.html" class="a-navbar" onclick="buttonClick()">GAMES</a>
+                    <a href="#indexx.html" class="a-navbar" onclick="buttonClick()">GAMES</a>
                 </li>
                 <li class="li-navbar">
-                    <a href="/tes.html" class="a-navbar" onclick="buttonClick()">CONTACT</a>
+                    <a href="#tes.html" class="a-navbar" onclick="buttonClick()">CONTACT</a>
                 </li>
             </ul>
         </div>
